Finish manual centrifuge impl